--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -18,10 +18,10 @@ from setuptools import setup, find_packages
 from setuptools.dist import Distribution
 from setuptools.command.install import install
 
-requires=['binpacking==1.3', 'cython', 'jinja2', 'docopt', 'pylicense3>=0.4.1',
-                        'ipython', 'pytest', 'pytest-cov', 'cmakelang==0.6.13',
+requires=['jinja2', 'docopt', 'pylicense3>=0.4.1',
+                        'ipython', 'pytest', 'pytest-cov', 'cmake_format==0.6.13',
                         'codecov', 'yapf==0.25', 'loguru', 'numpy', 'scipy', 'matplotlib',
-                        'k3d==2.6.6', 'vtk', 'ipywidgets', 'lxml', 'xmljson']
+                        'k3d', 'vtk', 'ipywidgets', 'lxml', 'xmljson']
 extras_require = []
 if '${HAVE_MPI}' == 'TRUE':
     extras_require.append('mpi4py')
@@ -61,4 +61,4 @@ setup(name='dune-xt',
                './scripts/distribute_testing.py',
                './scripts/dxt_code_generation.py',
                './scripts/numa_speedup.py',
-             './wrapper/dune_xt_execute.py'])
+               './wrapper/dune_xt_execute.py'])
