--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -431,6 +431,8 @@ clang_full python:
     extends: .subdir-test
     variables:
         CI_IMAGE: debian_clang_full
+    tags:
+        - dustin
     stage: python
     needs: ["debian_clang_full"]
     script:
