--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -330,6 +330,8 @@ common clang_full cpp:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: common
+    tags:
+        - dustin
     stage: cpp
     needs: ["debian_clang_full"]
     script:
@@ -340,6 +342,8 @@ common clang_full headercheck:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: common
+    tags:
+        - dustin
     stage: headercheck
     needs: ["debian_clang_full"]
     script:
@@ -350,6 +354,8 @@ grid clang_full cpp:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: grid
+    tags:
+        - dustin
     stage: cpp
     needs: ["debian_clang_full"]
     script:
@@ -360,6 +366,8 @@ grid clang_full headercheck:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: grid
+    tags:
+        - dustin
     stage: headercheck
     needs: ["debian_clang_full"]
     script:
@@ -370,6 +378,8 @@ functions clang_full cpp:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: functions
+    tags:
+        - dustin
     stage: cpp
     needs: ["debian_clang_full"]
     script:
@@ -381,6 +391,8 @@ functions clang_full headercheck:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: functions
+    tags:
+        - dustin
     stage: headercheck
     needs: ["debian_clang_full"]
     script:
@@ -391,6 +403,8 @@ la clang_full cpp:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: la
+    tags:
+        - dustin
     stage: cpp
     needs: ["debian_clang_full"]
     script:
@@ -401,6 +415,8 @@ la clang_full headercheck:
     variables:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: la
+    tags:
+        - dustin
     stage: headercheck
     needs: ["debian_clang_full"]
     script:
