--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ dune_pybindxi_install_python_package(PATH python)
 include_dependent_binary_python_dirs()
 
 # install jinja2 for code generation into the dune-python virtualenv
-execute_process(COMMAND ${DUNE_PYTHON_VIRTUALENV_EXECUTABLE} -m pip install jinja2 pytest-cov)
+execute_process(COMMAND ${DUNE_PYTHON_VIRTUALENV_EXECUTABLE} -m pip install jinja2 pytest-cov ipywidgets)
 
 
 add_subdirectory(python)
